# adb_serial_logger

./: .gitignore  README.MD  pyproject.toml
serial-logger/: serial_logger.py
serial_logger/: cmd_response_logger.py  config.py  serialLogger.py  serial_events.py  serial_logger.py  serial_port_logger.py  startLogger.sh
src/: binaryLogger.py  startLogger.sh
tests/: test_cmd_response_logger.py
